--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,42 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@assets/*": ["./src/application/assets/*"],
+      "@components/*": ["./src/application/components/*"],
+      "@contexts/*": ["./src/application/contexts/*"],
+      "@constants/*": ["./src/application/constants/*"],
+      "@dtos/*": ["./src/application/dtos/*"],
+      "@flows/*": ["./src/application/flows/*"],
+      "@hooks/*": ["./src/application/hooks/*"],
+      "@provider/*": ["./src/application/provider/*"],
+      "@routes/*": ["./src/application/routes/*"],
+      "@theme/*": ["./src/application/theme/*"],
+      "@application/*": ["./src/application/*"],
+      "@infrastructure/*": ["./src/infrastructure/*"],
+      "@utils/*": ["./src/utils/*"],
+    },
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin",
+        "lint": {
+          "validProperties": [
+            "shadow-color",
+            "shadow-opacity",
+            "shadow-offset",
+            "shadow-radius",
+            "padding-horizontal",
+            "padding-vertical",
+            "margin-vertical",
+            "margin-horizontal",
+            "tint-color",
+            "aspect-ratio",
+            "elevation"
+          ]
+        }
+      }
+    ]
   }
 }
