--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-uuid": "^2.0.1",
     "styled-components": "^6.0.1"
   },
   "devDependencies": {
