--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
-    "styled-components": "^6.0.1"
+    "styled-components": "^6.0.1",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +35,7 @@
     "eslint-config-universe": "^11.2.0",
     "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.8",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
